# TSE-Chomsky

./: LICENSE  Makefile  README.md  example.sh  pyproject.toml
chomsky_neural/: env.py  file_utils.py
chomsky_neural/data/: generate_data.py  instance.py  source.py  tasks.py  utils.py  vocabulary.py
chomsky_neural/models/: acceptance_predictor.py  seq2seq_with_lm_head.py
chomsky_neural/modules/: activation.py  feedforward.py  stack_rnn.py
chomsky_neural/modules/datamodule/: datamodule.py  pair_datamodule.py
chomsky_neural/modules/heads/: __init__.py  classifier_head.py  head.py
chomsky_neural/modules/seq2seq_encoder/: __init__.py  pass_through_encoder.py  pytoch_transformer_encoder.py  pytorch_seq2seq_wrapper.py  seq2seq_encoder.py  stack_rnn_encoder.py
chomsky_neural/modules/seq2vec_encoder/: __init__.py  bert_encoder.py  pytorch_seq2vec_wrapper.py  pytorch_transformer_encoder.py  seq2vec_encoder.py  stack_rnn_encoder.py
chomsky_neural/modules/token_embedder/: __init__.py  embedding.py  token_embedder.py
chomsky_neural/torch/: optimizer.py  util.py
chomsky_neural/torch/metrics/: classification.py
configs/: gpt2.json  lstm.json  stack_rnn.json
scripts/: generate_data.py  train.py
tests/models/: test_seq2seq_with_lm_head.py
tests/modules/seq2seq_encoder/: test_pytorch_seq2seq_encoders.py  test_pytorch_transformer_encoder.py  test_stack_rnn_encoder.py
